--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,12 @@
 {
+  "name": "mymixes-server",
+  "version": "1.0.0",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "postinstall": "npx prisma generate"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
