--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
+    "build": "npx prisma generate --schema=src/prisma/schema.prisma && tsc",
     "start": "node dist/index.js"
   },
   "prisma": {
