--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,5 @@
   "buildCommand": "cd client && npm run build",
   "outputDirectory": "client/dist",
   "installCommand": "cd client && npm install",
-  "framework": "vite",
-  "env": {
-    "VITE_API_URL": "https://mymixes-website-production-5e7e.up.railway.app"
-  }
+  "framework": "vite"
 }
